luci-theme-material: fix word-wrapping by hnyman

--- a/themes/luci-theme-material/htdocs/luci-static/material/css/style.css
+++ b/themes/luci-theme-material/htdocs/luci-static/material/css/style.css
@@ -1097,7 +1097,7 @@ header > .container > .pull-right > * {
 }
 
 /* fix System Software*/
-.node-system-software > .main table tr td:nth-child(4) {
+.node-system-software > .main table tr td:nth-child(5) {
     white-space: normal;
     font-size: small;
     color: #404040;
